--- a/serverless.yml
+++ b/serverless.yml
@@ -4,7 +4,7 @@ frameworkVersion: ">=1.34.0 <2.0.0"
 provider:
   name: aws
   region: eu-central-1
-  deploymentBucket: europace.projects
+  deploymentBucket: ${env:SERVERLESS_DEPLOYMENT_BUCKET}
 
 layers:
   tesseract:
@@ -12,3 +12,5 @@ layers:
     compatibleRuntimes:
       - python3.6
       - python3.7
+      - python3.8
+
